Z-index bug fixed , now all complete in my view 2 on Heading div

--- a/src/App.css
+++ b/src/App.css
@@ -109,12 +109,14 @@ main>#heading_div {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  z-index: 999999;
 }
 
 #heading_div>h2 {
   color: var(--theme);
   transition: all 1s;
+  border-bottom: 1px solid var(--text);
+  border-radius: 100px;
+  padding: 0 1vh;
 }
 
 #heading_div>h2:hover {
@@ -159,7 +161,7 @@ main>#both_holder {
   overflow: hidden;
   border-radius: 7%;
   margin: 1vh 0;
-  z-index: 99999;
+  z-index: 10;
 
 
 
@@ -178,9 +180,6 @@ main>#both_holder {
   width: 100%;
   object-fit: cover;
   transition: all 150ms;
-
-  display: inline-block;
-  z-index: 1000;
 }
 
 #inner_left img:hover {
